--- a/app/src/main/res/layout/activity_welcome_mcactivity.xml
+++ b/app/src/main/res/layout/activity_welcome_mcactivity.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textColor="@color/teal_700"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -28,23 +28,39 @@
         android:textAlignment="center"
         android:text="Antes de iniciar, dinos tu nombre y número de teléfono"/>
 
-    <EditText
-        android:id="@+id/edtNomProp"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:inputType="textPersonName"
-        android:maxLength="20"
-        android:hint="Digite su nombre"/>
+        android:hint="Digite su nombre"
+        app:startIconDrawable="@drawable/user"
+        app:startIconTint="@color/teal_700"
+        app:endIconMode="clear_text">
 
-    <EditText
-        android:id="@+id/edtNumProp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtNomProp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:maxLength="20"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:inputType="phone"
-        android:maxLength="8"
-        android:hint="Digite su número"/>
+        android:hint="Digite su número de teléfono"
+        app:startIconDrawable="@drawable/phone"
+        app:startIconTint="@color/teal_700"
+        app:endIconMode="clear_text">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtNumProp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:maxLength="8"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnGuardarProp"
@@ -52,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:textAllCaps="false"
+        app:icon="@drawable/arrow"
         android:text="Siguiente"/>
 
 </LinearLayout>
