--- a/app/src/main/res/layout/item_mc_contacts.xml
+++ b/app/src/main/res/layout/item_mc_contacts.xml
@@ -1,82 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="40dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="9dp">
+        android:layout_weight="0.10"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/ivIcono"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            app:srcCompat="@android:drawable/ic_menu_call" />
+
+        <TextView
+            android:id="@+id/tvId"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20dp"
+            android:text="Id"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.40"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvNombre"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20dp"
+            android:text="Contacto"/>
+
+        <TextView
+            android:id="@+id/tvNumero"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20dp"
+            android:text="Numero"/>
+
+        <TextView
+            android:id="@+id/tvPropietario"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:textSize="20dp"
+            android:text="Propietario"
+            android:layout_weight="1"/>
 
-            <ImageView
-                android:id="@+id/ivIcono"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:layout_marginTop="8dp"
-                app:srcCompat="@android:drawable/ic_menu_edit" />
+    </LinearLayout>
 
-            <TextView
-                android:textSize="20dp"
-                android:id="@+id/tvId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Id"
-                android:layout_weight="0"
-                android:layout_marginEnd="15dp" />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.2"
+        android:orientation="vertical">
 
-            <TextView
-                android:textSize="20dp"
-                android:id="@+id/tvNombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Contacto"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/tvNumero"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Numero"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:textSize="20dp"
-                android:id="@+id/tvPropietario"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Propietario"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
         <Button
             android:id="@+id/btnModificar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:backgroundTint="@color/teal_200"
+            android:backgroundTint="#B87614"
             android:text="Modificar"
-            android:layout_marginEnd="10dp"/>
+            android:textSize="12sp"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/btnEliminar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
             android:backgroundTint="@color/design_default_color_error"
+            android:textAllCaps="false"
+            android:textSize="12sp"
             android:text="Eliminar" />
+
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
